- Adapted reflection constructor to Java 10. - Added PetMapServiceTest. - Added vet list and specialties. Closes #48.